force-app/main/default/objects/Opportunity/fields/OB_Operation_Stage__c.field-meta.xml
<CustomField>
    <fullName>OB_Operation_Stage__c</fullName>
    <label>OB Operation Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Stage_Types__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Docusign Received</fullName>
            </value>
            <value>
                <fullName>Billing Setup</fullName>
            </value>
            <value>
                <fullName>Info Validation</fullName>
            </value>
            <value>
                <fullName>Info Complete</fullName>
            </value>
            <value>
                <fullName>Campaign Test</fullName>
            </value>
            <value>
                <fullName>Campaign Creation</fullName>
            </value>
            <value>
                <fullName>Campaign Active</fullName>
            </value>
            <value>
                <fullName>Deactivated</fullName>
            </value>
            <value>
                <fullName>Setup</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Paused</fullName>
            </value>
            <value>
                <fullName>Call Center DID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>