force-app/main/default/objects/Opportunity/fields/OBCSortOrder__c.field-meta.xml
<CustomField>
    <fullName>OBCSortOrder__c</fullName>
    <label>OBC_Sort_Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>