force-app/main/default/objects/Opportunity/fields/Operational_Stage_Hot_Leads__c.field-meta.xml
<CustomField>
    <fullName>Operational_Stage_Hot_Leads__c</fullName>
    <label>Operational Stage - Hot Leads</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Stage_Types__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Docusign Received</fullName>
            </value>
            <value>
                <fullName>Billing Setup</fullName>
            </value>
            <value>
                <fullName>Active Tier 1</fullName>
            </value>
            <value>
                <fullName>Active Tier 2</fullName>
            </value>
            <value>
                <fullName>Active Tier 3</fullName>
            </value>
            <value>
                <fullName>Deactivated</fullName>
            </value>
            <value>
                <fullName>Hot Leads Active</fullName>
            </value>
            <value>
                <fullName>Hot Leads Portal Complete</fullName>
            </value>
            <value>
                <fullName>Hot Leads Portal Setup</fullName>
            </value>
            <value>
                <fullName>Call Center DID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>