force-app/main/default/objects/Opportunity/fields/Operational_Stages__c.field-meta.xml
<CustomField>
    <fullName>Operational_Stages__c</fullName>
    <label>Operations Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Stage_Types__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Docusign Received</fullName>
            </value>
            <value>
                <fullName>Billing Setup</fullName>
            </value>
            <value>
                <fullName>DID Setup</fullName>
            </value>
            <value>
                <fullName>Gift Card Awaiting Artwork</fullName>
            </value>
            <value>
                <fullName>Gift Card Graphic Design</fullName>
            </value>
            <value>
                <fullName>Gift Card Proof Sent to Client</fullName>
            </value>
            <value>
                <fullName>Gift Card Pending</fullName>
            </value>
            <value>
                <fullName>Gift Card Client Approved</fullName>
            </value>
            <value>
                <fullName>Quality Assurance</fullName>
            </value>
            <value>
                <fullName>Gift Card Proof Approved</fullName>
            </value>
            <value>
                <fullName>Gift Card Ordered</fullName>
            </value>
            <value>
                <fullName>Gift Card Received &amp; in Fulfillment</fullName>
            </value>
            <value>
                <fullName>Gift Card Active Customer</fullName>
            </value>
            <value>
                <fullName>Deactivated Customer</fullName>
            </value>
            <value>
                <fullName>Call Center DID</fullName>
            </value>
            <value>
                <fullName>Cancel Pending</fullName>
            </value>
            <value>
                <fullName>Gift Card Docusign Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>