force-app/main/default/objects/Opportunity/fields/Opp_Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>Opp_Mailing_City__c</fullName>
    <label>Opp Mailing City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>