force-app/main/default/objects/Opportunity/fields/Opp_Mailing_Country__c.field-meta.xml
<CustomField>
    <fullName>Opp_Mailing_Country__c</fullName>
    <defaultValue>&quot;US&quot;</defaultValue>
    <label>Opp Mailing Country</label>
    <length>2</length>
    <type>Text</type>
</CustomField>