force-app/main/default/objects/Opportunity/fields/Opp_Mailing_State__c.field-meta.xml
<CustomField>
    <fullName>Opp_Mailing_State__c</fullName>
    <label>Opp Mailing State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>