force-app/main/default/objects/Opportunity/fields/Opp_Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>Opp_Mailing_Street__c</fullName>
    <label>Opp Mailing Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>