force-app/main/default/objects/Opportunity/fields/Opp_Mailing_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Opp_Mailing_Zip_Code__c</fullName>
    <label>Opp Mailing Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>