force-app/main/default/objects/Opportunity/fields/Opp_Number__c.field-meta.xml
<CustomField>
    <fullName>Opp_Number__c</fullName>
    <displayFormat>{00000000}</displayFormat>
    <label>Opp Number</label>
    <type>AutoNumber</type>
</CustomField>