force-app/main/default/objects/Opportunity/fields/Opp_Stage_Active_Customer_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Opp_Stage_Active_Customer_Date_Stamp__c</fullName>
    <label>Opp_Stage_Active_Customer_Date_Stamp</label>
    <type>Date</type>
</CustomField>