force-app/main/default/objects/Opportunity/fields/Opp_Stage_Awaiting_Artwork_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Opp_Stage_Awaiting_Artwork_Date_Stamp__c</fullName>
    <label>Opp Stage: Awaiting Artwork Date Stamp</label>
    <type>Date</type>
</CustomField>