force-app/main/default/objects/Opportunity/fields/Opp_Stage_Cancel_Pending__c.field-meta.xml
<CustomField>
    <fullName>Opp_Stage_Cancel_Pending__c</fullName>
    <label>Opp Stage: Cancel Pending</label>
    <type>Date</type>
</CustomField>