force-app/main/default/objects/Opportunity/fields/Opp_Stage_Client_Proof_Apvd_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Opp_Stage_Client_Proof_Apvd_Date_Stamp__c</fullName>
    <label>Opp Stage: Client Proof Apvd Date Stamp</label>
    <type>Date</type>
</CustomField>