force-app/main/default/objects/Opportunity/fields/Opp_Stage_Deactivated_Cust_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Opp_Stage_Deactivated_Cust_Date_Stamp__c</fullName>
    <label>Opp Stage: Deactivated Cust Date Stamp</label>
    <type>Date</type>
</CustomField>