force-app/main/default/objects/Opportunity/fields/Opp_Stage_Gift_Card_Ordered_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Opp_Stage_Gift_Card_Ordered_Date_Stamp__c</fullName>
    <label>Opp Stage: Gift Card Ordered Date Stamp</label>
    <type>Date</type>
</CustomField>