force-app/main/default/objects/Opportunity/fields/Opp_Stage_Graphic_Design_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Opp_Stage_Graphic_Design_Date_Stamp__c</fullName>
    <label>Opp Stage: Graphic Design Date Stamp</label>
    <type>Date</type>
</CustomField>