force-app/main/default/objects/Opportunity/fields/Opp_Stage_Proof_Approved_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Opp_Stage_Proof_Approved_Date_Stamp__c</fullName>
    <label>Opp Stage: Proof Approved Date Stamp</label>
    <type>Date</type>
</CustomField>