force-app/main/default/objects/Opportunity/fields/Opp_Stage_Proof_Sent_Client_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Opp_Stage_Proof_Sent_Client_Date_Stamp__c</fullName>
    <label>Opp Stage: Proof Sent Client Date Stamp</label>
    <type>Date</type>
</CustomField>