force-app/main/default/objects/Opportunity/fields/Opp_Stage_Rcvd_Fulfill_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Opp_Stage_Rcvd_Fulfill_Date_Stamp__c</fullName>
    <label>Opp Stage: Rcvd &amp; Fulfill Date Stamp</label>
    <type>Date</type>
</CustomField>