force-app/main/default/objects/Opportunity/fields/Outbound_Iframe_Src__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Iframe_Src__c</fullName>
    <description>Iframe src Url which is displayed in the outbound visual force page.</description>
    <label>Outbound Iframe Src</label>
    <type>Url</type>
</CustomField>