force-app/main/default/objects/Opportunity/fields/Pre_Close_Free_Hot_Leads_Stage_Date__c.field-meta.xml
<CustomField>
    <fullName>Pre_Close_Free_Hot_Leads_Stage_Date__c</fullName>
    <label>Pre Close: Free Hot Leads Stage Date</label>
    <type>Date</type>
</CustomField>