force-app/main/default/objects/Opportunity/fields/Pre_Paid_nuCard_Months__c.field-meta.xml
<CustomField>
    <fullName>Pre_Paid_nuCard_Months__c</fullName>
    <label>Pre-Paid nuCard Months</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>1 Month</fullName>
            </value>
            <value>
                <fullName>3 Months</fullName>
            </value>
            <value>
                <fullName>6 Months</fullName>
            </value>
            <value>
                <fullName>12 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>