force-app/main/default/objects/Opportunity/fields/Premier_Partner_Operation_Stage__c.field-meta.xml
<CustomField>
    <fullName>Premier_Partner_Operation_Stage__c</fullName>
    <label>Premier Partner Operation Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Stage_Types__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Docusign Received</fullName>
            </value>
            <value>
                <fullName>Billing Setup</fullName>
            </value>
            <value>
                <fullName>Setup</fullName>
                <default>true</default>
                <label>Setup</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Deactivated</fullName>
            </value>
            <value>
                <fullName>Call Center DID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>