force-app/main/default/objects/Opportunity/fields/Prime_Front__c.field-meta.xml
<CustomField>
    <fullName>Prime_Front__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prime Front Cards Included?</label>
    <type>Checkbox</type>
</CustomField>