force-app/main/default/objects/Opportunity/fields/Proposal_Price_Quote_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Price_Quote_Date_Stamp__c</fullName>
    <label>Proposal/Price Quote Date Stamp</label>
    <type>Date</type>
</CustomField>