force-app/main/default/objects/Opportunity/fields/Recurring_Setup_Complete__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Setup_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recurring Setup Complete</label>
    <type>Checkbox</type>
</CustomField>