force-app/main/default/objects/Opportunity/fields/Restart_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Restart_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows the scheduling for the campaign to continue.</description>
    <label>Restart Campaign</label>
    <type>Checkbox</type>
</CustomField>