force-app/main/default/objects/Opportunity/fields/RT__c.field-meta.xml
<CustomField>
    <fullName>RT__c</fullName>
    <label>RT</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CPL</fullName>
            </value>
            <value>
                <fullName>NuCard</fullName>
            </value>
            <value>
                <fullName>Door Tag</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>