force-app/main/default/objects/Opportunity/fields/SA_Graphic_Bonus__c.field-meta.xml
<CustomField>
    <fullName>SA_Graphic_Bonus__c</fullName>
    <formula>IF( NOT( ISNULL( Initial_Pay_Rcvd_Date_Stamp__c ) ) ,
    IF( ISNULL( Opp_Stage_Proof_Approved_Date_Stamp__c ) ,
        IF( (TODAY() - Initial_Pay_Rcvd_Date_Stamp__c ) &lt;= 7 , 
            0, 
            -50) ,
        IF( (Opp_Stage_Proof_Approved_Date_Stamp__c - Initial_Pay_Rcvd_Date_Stamp__c )  &lt;= 7 ,
            25, 
            -50)) ,
    NULL)</formula>
    <label>SA &amp; Graphic Bonus</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>