force-app/main/default/objects/Opportunity/fields/Scheduling_Paused__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Paused__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scheduling Paused</label>
    <type>Checkbox</type>
</CustomField>