force-app/main/default/objects/Opportunity/fields/SearsSortOrder__c.field-meta.xml
<CustomField>
    <fullName>SearsSortOrder__c</fullName>
    <label>Sears Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>