force-app/main/default/objects/Opportunity/fields/Stage_Types__c.field-meta.xml
<CustomField>
    <fullName>Stage_Types__c</fullName>
    <label>Stage Types</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Gift Card</fullName>
            </value>
            <value>
                <fullName>Premier Partner Fee</fullName>
            </value>
            <value>
                <fullName>Hot Lead</fullName>
            </value>
            <value>
                <fullName>OB Campaign</fullName>
            </value>
            <value>
                <fullName>Alarm Sale</fullName>
            </value>
            <value>
                <fullName>CPL</fullName>
            </value>
            <value>
                <fullName>CPL Spec</fullName>
            </value>
            <value>
                <fullName>DT CPL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>