force-app/main/default/objects/Opportunity/fields/Subscription_Opp_Sum__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Opp_Sum__c</fullName>
    <label>Subscription Opp Sum</label>
    <summarizedField>OpportunityLineItem.ListPrice</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>