force-app/main/default/objects/Opportunity/fields/Test_Drive__c.field-meta.xml
<CustomField>
    <fullName>Test_Drive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sets up the client for a specific OB Campaign outside it&apos;s normal process.  Managers are the only ones who have the ability to setup this option.</description>
    <inlineHelpText>Sets up the client for a specific OB Campaign outside it&apos;s normal process.  Managers are the only ones who have the ability to setup this option.</inlineHelpText>
    <label>Test Drive</label>
    <type>Checkbox</type>
</CustomField>